<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/fondo_rojo_vertical_app"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="119dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:shadowColor="#350202"
            android:text="@string/calculadora_con_historial"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="323dp" />

        <Button
            android:id="@+id/btnCalculadora"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="#FAF9F9"
            android:text="@string/abrir_calculadora"
            android:textColor="#AD0303" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="65dp"
                android:layout_height="71dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnAcerca"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:foregroundTint="#FFFFFF"
                android:text="@string/acerca_de"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="75dp"
                android:layout_height="33dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>